Boss spawn but it's all multiplied by 4
idk

--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -484,7 +484,7 @@
         "full_name": "Summon",
         "tooltip": null,
         "format": [
-            "(prob)% chance to summon a [(!type.fix_buff){(_summonMagnification(mult))}(type.fix_buff){(mult)}] (_entity(id)) after (_dispTime(time)), ",
+            "(prob)% chance to summon a [(!type.fix_buff){(_summonMagnification(mult))}(type.fix_buff){[(_isEnemy){(mult)%}(!_isEnemy){Lv(mult)}]}] (_entity(id)) after (_dispTime(time)), ",
             "one summoned (dis) range away from ",
             "[(type.on_kill|type.on_hit){each target}",
             "(!type.on_hit&!type.on_kill){the summoner}] ",
