--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -790,7 +790,7 @@
     },
     "SHIELDBREAK" : {
         "abbr_name" : "쉴드",
-        "full_name" : "쉴드를 부순다",
+        "full_name" : "쉴드를 브레이커",
         "tooltip" : "쉴드를 즉시 파괴합니다. 이 능력은 히트백시 쉴드가 다시 회복되는 것을 막을 수 없으니 유의해 주세요",
         "format" : "(prob)% 확률로 악마 쉴드를 부순다",
         "class" : {
