--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -1037,9 +1037,9 @@
     },
     "DEMONSHIELD" : {
         "abbr_name" : "D.Shield",
-        "full_name" : "Devil Shield",
+        "full_name" : "Aku Shield",
         "tooltip" : "Blocks a certain amount of damage. Unlike barrier, it absorbs damage instead of negating it.",
-        "format" : "Demonic Shield (_left)Shield has (_shield(hp)) HP, regenerates with (regen)% of its original HP when unit gets hitbacked(_right)",
+        "format" : "Aku Shield (_left)Shield has (_shield(hp)) HP, regenerates with (regen)% of its original HP when unit gets hitbacked(_right)",
         "class" : {
             "hp" : {
                 "name" : "health",
@@ -1052,10 +1052,10 @@
         }
     },
     "SHIELDBREAK" : {
-        "abbr_name": "shield breaker",
-        "full_name": "Shield Breaker",
-        "tooltip": "Directly breaks demon shield. Be aware that this doesn't prevent shield from regenerating when hitbacked.",
-        "format": "(prob)% chance to break demon shield",
+        "abbr_name": "Shield Pierce",
+        "full_name": "Shield Piercer",
+        "tooltip": "Directly breaks Aku shield. Be aware that this doesn't prevent shield from regenerating when hitbacked.",
+        "format": "(prob)% chance to break Aku shield",
         "class": {
             "prob": {
                 "name": "chance",
@@ -1099,7 +1099,7 @@
         }
     },
     "DEATHSURGE": {
-        "abbr_name": "d.surge",
+        "abbr_name": "D.Surge",
         "full_name": "Death Surge",
         "tooltip": null,
         "format": "(prob)% chance to make a surge attack for (_dispTime(time)) when killed (_left)Created within (dis_0) ~ (dis_1) range(_right)",
