--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -963,14 +963,39 @@
         }
     },
     "SHIELDBREAK" : {
-        "abbr_name" : "쉴드",
-        "full_name" : "쉴드를 부순다",
-        "tooltip" : "쉴드를 즉시 파괴합니다. 이 능력은 히트백시 쉴드가 다시 회복되는 것을 막을 수 없으니 유의해 주세요",
-        "format" : "(prob)% 확률로 악마 쉴드를 부순다",
-        "class" : {
-            "prob" : {
-                "name" : "확률",
-                "tooltip" : "타겟에게 해당 능력을 발동시킬 확률입니다"
+        "abbr_name": "쉴드",
+        "full_name": "쉴드를 부순다",
+        "tooltip": "쉴드를 즉시 파괴합니다. 이 능력은 히트백시 쉴드가 다시 회복되는 것을 막을 수 없으니 유의해 주세요",
+        "format": "(prob)% 확률로 악마 쉴드를 부순다",
+        "class": {
+            "prob": {
+                "name": "확률",
+                "tooltip": "타겟에게 해당 능력을 발동시킬 확률입니다"
             }
         }
+    },
+    "DEATHSURGE": {
+        "abbr_name": "사망 열파",
+        "full_name": "사망 시 열파",
+        "tooltip": "해당 개체가 죽으면 열파를 생성하도록 만듭니다. 이 능력이 발동될 경우 설정된 영혼에 상관없이 무조건 악마 영혼이 나타납니다",
+        "format": "(prob)% 확률로 사망 시 (_dispTime(time)) 동안 열파 공격 (_left) (dis_0) ~ (dis_1) 사이에서 랜덤으로 생성(_right)",
+        "class": {
+            "prob": {
+                "name": "확률",
+                "tooltip": "타겟에게 해당 능력을 발동시킬 확률입니다"
+            },
+            "dis_0": {
+                "name": "최소 거리",
+                "tooltip": "열파 공격이 소환되는 최소 거리를 정합니다"
+            },
+            "dis_1": {
+                "name": "최대 거리",
+                "tooltip": "열파 공격이 소환되는 최대 거리를 정합니다"
+            },
+            "time": {
+                "name": "시간",
+                "tooltip": "능력이 얼마동안 발동될지 정합니다"
+            }
+        }
+    }
 }
