--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -1067,7 +1067,7 @@
         "abbr_name": "Counter",
         "full_name": "Counter Attack",
         "tooltip": "Deal damage back when attacked.",
-        "format": ["(prob)% chance to counter enemy attacks, dealing (damage)[(!type.useOwnDamage){% of the damage received from an attack}] back.",
+        "format": ["(prob)% chance to counterattack, dealing (damage)% [(!type.useOwnDamage){of the damage received from an attack}(type.useOwnDamage){of this unit's damage}] back.",
                     "[(type.counterWave!=0){ This unit will also [(type.counterWave==1){counter}(type.counterWave==2){reflect}] wave/surge attacks.}] This counterattack will ",
                     "[(type.procType<2|type.procType==3){[(type.procType==0){not }]have}(type.procType==2){replace}] the original attack's procs[(type.procType==2){ with this unit's procs}(type.procType==3){ and this entity's procs}]. ",
                     "The counter will hit [(type.areaAttack){ all enemies}(!type.areaAttack){ only the attacker}][(type.areaAttack|!type.outRange){[(!type.areaAttack){ if they're}] standing ",
@@ -1087,7 +1087,7 @@
             },
             "maxRange": {
                 "name": "Max Range",
-                "tooltip": "The counter won't hit anything standing below this number. Leave this and Blindspot in 0 to use the unit's normal range."
+                "tooltip": "The counter will hit anything standing below this number. Leave this and Blindspot in 0 to use the unit's normal range."
             },
             "type.procType": {
                 "name": "Proc Type",
