update soul anim type lang

--- a/util/lang/assets/animation_type.json
+++ b/util/lang/assets/animation_type.json
@@ -13,7 +13,7 @@
         "ENTER": "enter",
         "ATK": "attack",
         "WALK": "walk",
-        "SOUL": "default"
+        "SOUL": "soul"
     },
     "VolcEff": {
         "DURING": "on",
