--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -928,7 +928,7 @@
     "abbr_name": "超装甲",
     "full_name": "スーパー装甲",
     "tooltip": "このアビリティは、一定量以下のすべてのダメージを0にする。",
-    "format": "(prob)%の確率で(dmg)以下のダメージを無効化する[(type.traitIgnore){ (_left)属性に関わらず(_right)}][(type.procs){ (_left)攻撃の能力も無効にする(_right)}]",
+    "format": "(prob)%の確率で(dmg)以下のダメージを(reduction)%で[(reduction>=0){軽減}(reduction<0){増加}]する[(type.traitIgnore){ (_left)属性に関わらず(_right)}][(type.procs){ (_left)攻撃の能力も無効にする(_right)}]",
     "class": {
       "prob": {
         "name": "確率",
@@ -938,9 +938,13 @@
         "name": "攻撃力",
         "tooltip": "無効化されるダメージの最小値。"
       },
+      "reduction" : {
+        "name" : "ダメージ軽減%",
+        "tooltip" : "ダメージを軽減する割合"
+      },
       "type.traitIgnore": {
         "name": "属性無視",
-        "tooltip": "これがチェックされると、この能力は敵の属性に関係なく発動できる。味方のユニットにのみ適用されます。"
+        "tooltip": "これがチェックされると、この能力は敵の属性に関係なく発動できる。"
       },
       "type.procs": {
         "name": "能力を無視する",
@@ -952,7 +956,7 @@
     "abbr_name": "魔法の盾",
     "full_name": "魔法の盾",
     "tooltip": "このアビリティは、一定量以上のすべてのダメージを当該量に軽減する（「ダメージを無効にする」がチェックされている場合は無効にする）。",
-    "format": "(prob)%の確率で(dmg)以上のダメージを[(!type.nullify){(dmg)に}(type.nullify){無効化}]する[(type.traitIgnore){ (_left)属性に関わらず(_right)}][(type.nullify&type.procs){ (_left)攻撃の能力も無効にする(_right)}]",
+    "format": "(prob)%の確率で(dmg)以上のダメージを[(!type.nullify){(dmg)に}(type.nullify){無効化}]する[(type.traitIgnore){ (_left)属性に関わらず(_right)}][(type.procs){ (_left)攻撃の能力も無効にする(_right)}]",
     "class": {
       "prob": {
         "name": "確率",
@@ -964,7 +968,7 @@
       },
       "type.traitIgnore": {
         "name": "属性無視",
-        "tooltip": "これがチェックされると、この能力は敵の属性に関係なく発動できる。味方のユニットにのみ適用されます。"
+        "tooltip": "これがチェックされると、この能力は敵の属性に関係なく発動できる。"
       },
       "type.nullify": {
         "name": "ダメージを無効にする",
